--- a/src/main/twirl/gitbucket/core/account/newrepo.scala.html
+++ b/src/main/twirl/gitbucket/core/account/newrepo.scala.html
@@ -1,4 +1,4 @@
-@(groupNames: List[String],
+@(groupNames: Seq[String],
 isCreateRepoOptionPublic: Boolean)(implicit context: gitbucket.core.controller.Context)
 @import context._
 @import gitbucket.core.view.helpers._
