--- a/src/main/twirl/gitbucket/core/account/application.scala.html
+++ b/src/main/twirl/gitbucket/core/account/application.scala.html
@@ -1,5 +1,5 @@
 @(account: gitbucket.core.model.Account,
-  personalTokens: List[gitbucket.core.model.AccessToken],
+  personalTokens: Seq[gitbucket.core.model.AccessToken],
   gneratedToken: Option[(gitbucket.core.model.AccessToken, String)])(implicit context: gitbucket.core.controller.Context)
 @import context._
 @import gitbucket.core.view.helpers._
