--- a/src/main/twirl/gitbucket/core/account/ssh.scala.html
+++ b/src/main/twirl/gitbucket/core/account/ssh.scala.html
@@ -1,4 +1,4 @@
-@(account: gitbucket.core.model.Account, sshKeys: List[gitbucket.core.model.SshKey])(implicit context: gitbucket.core.controller.Context)
+@(account: gitbucket.core.model.Account, sshKeys: Seq[gitbucket.core.model.SshKey])(implicit context: gitbucket.core.controller.Context)
 @import gitbucket.core.ssh.SshUtil
 @import context._
 @import gitbucket.core.view.helpers._
